testdata/source/org/intellij/plugins/ceylon/annotator/SyntaxError.ceylon

shared class Hello( <error descr="iterable type must have an element type">{</error>
    <error descr="incorrect syntax: mismatched token 'void' expecting closing brace '}'">void</error> sayHello() <error descr="incorrect syntax: missing closing parenthesis ')' at '{'">{</error>
    }
<error descr="incorrect syntax: mismatched token end of file expecting EOF">}</error>